--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
     <hr>
 
-    <h1>
+<!--     <h1>
         Form Test:
     </h1>
 
@@ -143,7 +143,7 @@
 
     <br>
     
-    <button class="favorite styled" type="button"> Submit </button>
+    <button class="favorite styled" type="button"> Submit </button> -->
 
   </body>
 </html>
