--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         Form Test:
     </h1>
 
-    <form>
+<!--     <form>
         <fieldset>
           <legend>Choose your favorite meeting time </legend>
       
@@ -112,9 +112,9 @@
           <input type="radio" id="Wednesday" name="Wednesday" value="W" />
           <label for="Wednesday">Wednesday</label>
         </fieldset>
-    </form>
+    </form> -->
 
-<!--     <br>
+    <br>
 
     <label for="Time slot">Choose a time slot:</label>
     <input list="possible time slot" id="Time slot" name="Time slot">
@@ -143,7 +143,7 @@
 
     <br>
     
-    <button class="favorite styled" type="button"> Submit </button> -->
+    <button class="favorite styled" type="button"> Submit </button>
 
   </body>
 </html>
