--- a/index.html
+++ b/index.html
@@ -57,7 +57,6 @@
         <h3>
             Meating content:
         </h3>
-        <p>
             <b> <em> Nothing </em> is recorded yet. </b> <br>
             Have to refer others' menu. <br>
             Watch an video if you want. <br>
@@ -67,7 +66,6 @@
                     <source src="HTML.mp4" type="video/mp4">
                 </video>
             </details>
-        </p>
     </main>
 
     <hr>
@@ -100,10 +98,10 @@
 
     <br>
 
-    <label for="Time slot">Choose a time slot:</label>
-    <input list="possible time slot" id="Time slot" name="Time slot">
+    <label for="Time_slot">Choose a time slot:</label>
+    <input list="possible_time_slot" id="Time_slot" name="Time slot">
 
-    <datalist id="possible time slot">
+    <datalist id="possible_time_slot">
         <option value="9:00">
         <option value="10:00">
         <option value="13:00">
@@ -112,14 +110,14 @@
 
     <br>
 
-    <label for="story"> If neither is appropriate, provid another day below :</label> <br>
-    <textarea id="Alternative" name="Alternative" rows="0" cols="33">
+    <label for="Alternative"> If neither is appropriate, provid another day below :</label> <br>
+    <textarea id="Alternative" name="Alternative" rows="2" cols="33">
     </textarea>
 
     <br>
 
     <label for="topic-select">Choose a Topic:</label>
-    <select name="pets" id="pet-select">
+    <select name="topic" id="topic-select">
         <option value="">--Please choose an option--</option>
         <option value="freerider">freerider</option>
         <option value="nothing yet">nothing yet</option>
@@ -134,7 +132,7 @@
         <p>
             by <i> Peng Luo </i>
             <br>
-            <img width = 50 src = "portrait.jpg">
+            <img width = 50 src = "portrait.jpg" alt = "NP">
         </p>
         <p>
             10/09/2022
