--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="manifest" href="site.webmanifest">
   </head>
 
-  <body>
+  <body style="background-color: rgb(187, 90, 90);">
     <header>
         <h1> 
             Meeting Menu
